feat: pulumit the winkle and other minor changes

--- a/tail/Tail.fsproj
+++ b/tail/Tail.fsproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <Compile Include="AppHandlers.fs" />
     <Compile Include="Setup.fs" />
+    <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="appsettings.Development.json">
