a bit of everything rolled up into one commit

--- a/shell/Shell.fsproj
+++ b/shell/Shell.fsproj
@@ -12,6 +12,7 @@
     <Compile Include="Page.fs" />
     <Compile Include="Meta.fs" />
     <Compile Include="GoogleRecaptcha.fs" />
+    <Compile Include="Javascript.fs" />
     <Compile Include="FavIcon.fs" />
     <Compile Include="Tailwind.fs" />
     <Compile Include="Cascading.fs" />
